--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -46,9 +46,8 @@ Icon=msdt.exe,0
 ;播放到设备
 [7ad84985-87b4-4a16-be58-8b72a5b390f7]
 Text=@playtomenu.dll,-101
-;向左、向右旋转
 [ffe2a43c-56b9-4bf5-9a79-cc6d4285608a]
-Text=@*,-3028
+Text=向左、向右旋转
 ;设置为桌面背景
 [ff609cc7-d34d-4049-a1aa-2293517ffcc6]
 Icon=imageres.dll,-5346
@@ -64,17 +63,15 @@ Icon=imageres.dll,-5340
 [f3d06e7c-1e45-4a26-847e-f9fcdee59be0]
 Text=@*,-30328
 Icon=imageres.dll,-5302
-;包含到库中(&I)
 [3dad6c5d-2167-4cae-9914-f99e41c12cfa]
-Text=@*,-34593
+Text=包含到库中(&I)
 Icon=imageres.dll,-1001
 ;固定到"开始"屏幕(&P)
 [470C0EBD-5D73-4d58-9CED-E91E22E23282]
 Text=@shell32.dll,-51201
 Icon=imageres.dll,-5376
-;固定到“开始”列表(&L)
 [a2a9545d-a0c2-42b4-9708-a0b2badd77c8]
-Text=@*,-51395
+Text=附到「开始」菜单(&U)
 Icon=imageres.dll,75
 ;Text=发送到(&N)
 [7BA4C740-9E81-11CF-99D3-00AA004AE837]
@@ -88,9 +85,10 @@ Icon=imageres.dll,-5346
 [D969A300-E7FF-11d0-A93B-00A0C90F2719]
 Text=@*,-95851
 Icon=imageres.dll,-5307
-;加密(&Y)
+[6b9228da-9c15-419e-856c-19e768a13bdc]
+Text=Windows 小工具
 [A470F8CF-A1E8-4f65-8335-227475AA5C46]
-Text=@*,-28954
+Text=加密(&Y)
 Icon=imageres.dll,54
 ;共享
 [e2bf9676-5f8f-435c-97eb-11607a5bedf7]
@@ -113,16 +111,20 @@ Text=@*,-101
 [fbeb8a05-beee-4442-804e-409d6c4515e9]
 Text=@*,-12560
 Icon=imageres.dll,25
+[59099400-57ff-11ce-bd94-0020af85b590]
+Text=复制磁盘(&Y)...
 ;便携设备菜单
 [D6791A63-E7E2-4fee-BF52-5DED8E86E9B8]
 Text=@*,-511
-;在导航窗格中显示
 [0af96ede-aebf-41ed-a1c8-cf7a685505b6]
-Text=@*,-34618
+Text=不在导航窗格中显示
 Icon=imageres.dll,-5359
 ;还原以前的版本(&V)
 [596AB062-B4D2-4215-9F74-E9109B0A8153]
 Text=@*,-1037
+;公文包
+[85bbd920-42a0-1069-a2e4-08002b30309d]
+Text=@shell32.dll,-22978
 ;复制到文件夹(&F)...
 [c2fbb630-2971-11d1-a18c-00c04fd75d13]
 Text=@*,-30304
@@ -145,23 +147,20 @@ Icon=nvcpl.dll,0
 [e97dec16-a50d-49bb-ae24-cf682282e08d]
 Text=@nv3dappshextr.dll,-109
 Icon=nvcpl.dll,0
-;NVIDIA 控制面板
 [3D1975AF-48C6-4f8e-A182-BE0E08FA86A9]
-Text=@%ProgramFiles%\NVIDIA Corporation\Control Panel Client\nvcpluir.dll,-110
+Text=NVIDIA 控制面板
 Icon=nvcpl.dll,0
 [9B5F5829-A529-4B12-814A-E81BCB8D93FC]
 Text=英特尔® 显卡设置
 Icon=.\Gfxv4_0.exe,0
 ;使用 Microsoft Defender扫描...
 [09A47860-11B0-4DA5-AFA5-26D86198A780]
-Text=@shell32.dll,-50257
+Text=Microsoft Defender
 Icon=.\EppManifest.dll,0
-;使用火绒安全进行杀毒
 [18A3E590-F219-4105-9079-93DAFA51B9D6]
-Text=@*,-103
-;使用火绒安全粉碎文件
+Text=使用火绒安全进行杀毒
 [9F012318-CAA5-402C-9BF6-28EB36F61496]
-Text=@*,-102
+Text=使用火绒安全粉碎文件
 [53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
 Text=通过QQ发送到
 [9B6D38F3-8EF4-48A5-AD30-FFFFFFFFFFFF]
