--- a/Update.ini
+++ b/Update.ini
@@ -1,4 +1,4 @@
 [Update]
 Version=2.0.0.0
 Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/2.0.0.0/ContextMenuManager.zip
-Info=优化部分代码，添加部分GUID字典\n适配Win7系统（依赖框架.Net Framework 3.5，Win7自带无需另外安装）\nWin10版依赖框架为.Net Framework 4.6，Win10自带无需安装\n可单独下载对应系统版本.exe文件，或下载.zip包解压后仅保留对应系统的版本
+Info=优化部分代码，添加部分GUID字典；适配Win7系统（依赖框架.Net Framework 3.5，Win7自带无需另外安装）；Win10版依赖框架为.Net Framework 4.6，Win10自带无需安装\n可单独下载对应系统版本.exe文件，或下载.zip包解压后仅保留对应系统的版本
