添加“迅雷播放组件”GUID字典

--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -253,3 +253,6 @@ Icon=.\kismain.exe,0
 [D21D88E8-4123-48BA-B0B1-3FDBE4AE5FA4]
 Text=金山毒霸(32位)扫描 && 文件粉碎
 Icon=.\kismain.exe,0
+[8f556da3-987d-47b0-aa88-eb8d52fe1b9a]
+Text=迅雷播放组件
+Icon=..\Program\XMP\XMP.exe,0
