--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -31,6 +31,7 @@ OpenWith = 打开方式
 WinX = Win+X
 
 LnkFile = lnk文件
+UwpLnk = uwp lnk
 ExeFile = exe文件
 TextFile = 文本文件
 ImageFile = 图像文件
@@ -67,6 +68,7 @@ OpenWith = 所有文件右键 "打开方式" 的菜单项目
 WinX = Win10 "开始" 按钮的右键Win+X菜单项目
 
 LnkFile = 所有快捷方式的右键菜单
+UwpLnk = Win10 UWP应用快捷方式的右键菜单
 ExeFile = 所有EXE可执行文件的右键菜单
 TextFile = 通用文本格式(如.txt、.ini)文件的右键菜单
 ImageFile = 通用图像格式(如.jpg、.png)文件的右键菜单
