--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -256,3 +256,15 @@ Icon=.\kismain.exe,0
 [8f556da3-987d-47b0-aa88-eb8d52fe1b9a]
 Text=迅雷播放组件
 Icon=..\Program\XMP\XMP.exe,0
+[dde4beeb-dde6-48fd-8eb5-035c09923f83]
+Text=Unlocker
+Icon=.\Unlocker.exe,0
+[9c5397bb-07be-4e38-98ba-395f94045091]
+Text=福昕PDF编辑器
+Icon=..\FoxitPhantom.exe,0
+[eee949eb-c9ed-4967-98b0-ed4e543befa5]
+Text=115网盘
+Icon=..\115chrome.exe,0
+[C49499AC-DC25-478B-B903-E005012B3DD1]
+Text=使用智量扫描
+Icon=.\WiseVector.exe,0
