新增部分GUID字典

--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -125,6 +125,9 @@ Text=@*,-1037
 ;公文包
 [85bbd920-42a0-1069-a2e4-08002b30309d]
 Text=@shell32.dll,-22978
+;全部解压缩(&T)...
+[b8cdcb65-b1bf-4b42-9428-1dfdb7ee92af]
+Text=@shell32.dll,-37514
 ;复制到文件夹(&F)...
 [c2fbb630-2971-11d1-a18c-00c04fd75d13]
 Text=@*,-30304
@@ -207,12 +210,12 @@ Text=扫描病毒(电脑管家)
 [754DF2CE-51E8-4895-B53C-6381418B84AE]
 Text=文件粉碎(电脑管家)
 [CBDECEF7-7A29-4cbf-A009-2673D82C7BF9]
-Text=强力卸载
+Text=强力卸载(电脑管家)
 Icon=.\QQPCSoftMgr.exe,0
 [C5617F6A-39BB-436D-91CF-61C1B45DD688]
 Text=深度加速(管家小火箭)
 [CF444751-60FC-48B8-AC0F-363063EB2A9E]
-Text=开启桌面整理
+Text=开启桌面整理(电脑管家)
 [B3A2F1A4-10A2-410C-9C19-622B621C61D0]
 Text=换壁纸(小鸟壁纸)
 [23170F69-40C1-278A-1000-000100020000]
@@ -262,9 +265,47 @@ Icon=.\Unlocker.exe,0
 [9c5397bb-07be-4e38-98ba-395f94045091]
 Text=福昕PDF编辑器
 Icon=..\FoxitPhantom.exe,0
+[a6595cd1-bf77-430a-a452-18696685f7c7]
+Text=Adobe Acrobat
+Icon=..\Acrobat\Acrobat.exe,0
 [eee949eb-c9ed-4967-98b0-ed4e543befa5]
 Text=115网盘
 Icon=..\115chrome.exe,0
 [C49499AC-DC25-478B-B903-E005012B3DD1]
 Text=使用智量扫描
 Icon=.\WiseVector.exe,0
+[758c684b-4d10-4bc1-90da-6bebf0b4e0b4]
+Text=使用联想电脑管家进行扫描
+[3b7162fb-4389-40c8-83a5-da10d491ec66]
+Text=映射此文件夹到桌面(小智桌面)
+Icon=.\XZDesktop.exe,0
+[96babf4f-7c38-4885-b407-3800f461669b]
+Text=打开火萤视频桌面
+Icon=*,3
+[a2a9545d-a0c2-42b4-9708-a0b2badd77c9]
+Text=附到「开始」菜单(&U)(StartIsBack)
+Icon=.\StartIsBackCfg.exe,0
+[e0d79304-84be-11ce-9641-444553540000]
+Text=WinZip
+Icon=.\WzPreloader.exe,0
+[acf03765-1658-485f-9615-fe03c372fb8c]
+Text=微压
+[dd847e93-86df-4d75-a421-46d29228f6da]
+Text=极光压缩
+Icon=.\plFM.exe,0
+[5e3b6ea4-de96-464f-bb86-5587969f4c62]
+Text=万能压缩
+[9175e343-1c41-4490-b178-14f36504f07e]
+Text=160压缩
+Icon=.\160zip.exe,0
+[2008caf4-a5c1-4037-99a8-699e4d01456d]
+Text=天翼云盘
+Icon=.\eCloud.exe,0
+[83a97a48-f5d7-4d12-8ba3-5263a016d936]
+Text=使用光影4.0编辑
+[410bf280-86ef-4e0f-8279-ec5848546ad3]
+Text=IObit Unlocker
+Icon=.\IObitUnlocker.exe,0
+[cca9efd3-29ed-430a-ba6d-e6bbff0a60c2]
+Text=McAfee
+Icon=.\McInstru.exe,0
