新增"添加本地GUID字典"功能

--- a/ContextMenuManager/ContextMenuManager.csproj
+++ b/ContextMenuManager/ContextMenuManager.csproj
@@ -126,6 +126,9 @@
     <Compile Include="Controls\AddCommonButton.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\AddGuidDicDialog.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\SelectItemsForm.cs">
       <SubType>Form</SubType>
     </Compile>
