--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -106,7 +106,10 @@ FileLocation = 文件位置
 RegistryLocation = 注册表位置
 Delete = 删除此项
 DeleteReference = 删除引用
+HandleGuid = 处理guid
 CopyGuid = 复制guid
+BlockGuid = 锁定Guid
+AddGuidDic = 添加字典
 InitialData = 初始数据
 Edit = 编辑
 Save = 保存
@@ -143,9 +146,12 @@ NewSendToItem = 新建发送到子菜单项目
 NewOpenWithItem = 新建打开方式菜单项目
 ItemText = 菜单文本
 ItemCommand = 菜单命令
+ItemName = 项目名称
+ItemIcon = 项目图标
 SingleMenu = 一级
 MultiMenu = 多级
 InputGuid = 输入Guid
+AddGuidDic = 添加Guid本地字典
 SelectExtension = 请选择一个文件扩展名
 CheckReference = 请勾选你想要添加引用的菜单项目
 CheckCommon = 请勾选你想要添加的常用菜单项目
