完善“添加本地GUID字典”功能

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -152,6 +152,7 @@ SingleMenu = 一级
 MultiMenu = 多级
 InputGuid = 输入Guid
 AddGuidDic = 添加Guid本地字典
+DeleteGuidDic = 删除
 SelectExtension = 请选择一个文件扩展名
 CheckReference = 请勾选你想要添加引用的菜单项目
 CheckCommon = 请勾选你想要添加的常用菜单项目
@@ -190,6 +191,7 @@ AddExistingItems = 添加对现有项目的引用
 AddSeparator = 添加分隔线
 Separator = 项目分隔线
 AddCommonItems = 添加常用菜单项目
+DeleteGuidDic = 删除用户自行添加的该项的本地Guid字典
 
 [Other]
 DictionaryDescription = 字典说明
