换个说法解释"NoWorkingDirectory"

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -96,7 +96,7 @@ SetBottom = 置底
 OtherAttributes = 其他属性
 OnlyWithShift = 仅在按住Shift键后显示
 OnlyInExplorer = 仅在Explorer窗口显示
-NoWorkingDirectory = 不以当前目录为工作目录
+NoWorkingDirectory = 不使用右键所处目录信息
 ShowSeparator = 在此项上方显示分隔线
 Details = 详细信息
 WebSearch = 网页搜索
