分别修改.Net Framework框架版本为4.5和3.5，完美兼容Win8、Win8.1、Win7

--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -38,7 +38,7 @@ Icon=shell32.dll,-16769
 ;打开文件所在的位置(&I)
 [37ea3a21-7493-4208-a011-7f9ea79ce9f5]
 Text=@*,-1033
-Icon=imageres.dll,203
+Icon=explorer.exe,0
 ;兼容性疑难解答(&Y)
 [1d27f844-3a1f-4410-85ac-14651078412d]
 Text=@*,-2022
@@ -139,6 +139,10 @@ Icon=imageres.dll,-5303
 [3080f90e-d7ad-11d9-bd98-0000947b0257]
 Text=窗口转换程序
 Icon=imageres.dll,0
+[8a734961-c4aa-4741-ac1e-791acebf5b39]
+Text=联机购买音乐
+[e598560b-28d5-46aa-a14a-8a3bea34b576]
+Text=幻灯片放映
 [cb3d0f55-bc2c-4c1a-85ed-23ed75b5106b]
 Text=OneDrive
 Icon=%LocalAppData%\Microsoft\OneDrive\OneDrive.exe,0
