--- a/ContextMenuManager/ContextMenuManager.csproj
+++ b/ContextMenuManager/ContextMenuManager.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>ContextMenuManager</RootNamespace>
     <AssemblyName>ContextMenuManager</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -97,7 +97,6 @@
     <ApplicationManifest>Properties\App.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -110,19 +109,20 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BulePointLilac.Controls\MyToolTip.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="BulePointLilac.Controls\MyToolTip.cs" />
     <Compile Include="BulePointLilac.Controls\ResizbleForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="BulePointLilac.Controls\MyToolBar.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="BulePointLilac.Methods\GuidEx.cs" />
     <Compile Include="BulePointLilac.Methods\IniFileHelper.cs" />
     <Compile Include="BulePointLilac.Methods\IniReader.cs" />
     <Compile Include="BulePointLilac.Methods\MessageBoxEx.cs" />
     <Compile Include="BulePointLilac.Methods\RichTextBoxExtension.cs" />
+    <Compile Include="BulePointLilac.Methods\StringExtension.cs" />
+    <Compile Include="BulePointLilac.Methods\WshShortcut.cs" />
     <Compile Include="Controls\AddCommonButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -330,17 +330,6 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <COMReference Include="IWshRuntimeLibrary">
-      <Guid>{F935DC20-1CF0-11D0-ADB9-00C04FD58A0B}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Properties\AppIcon.ico" />
     <Content Include="Properties\Resources\Texts\ShellCommonDic.xml" />
     <Content Include="Properties\Resources\Images\About.png" />
@@ -372,7 +361,6 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
