添加WinX命令提示符替换为PowerShell规则

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -129,6 +129,7 @@ RecycleBinProperties = 属性(&R)
 RemovableDrive = 可移动磁盘
 BuildSendtoMenu = 快速构建发送到子菜单
 UseStoreOpenWith = 在Microsoft Store中查找应用
+WinXPowerShell = Win+X菜单命令提示符替换为PowerShell
 NewItem = 新建一个菜单项目
 AddGuidBlockedItem = 添加GUID锁定项目
 CurrentExtension = 你当前选择的文件格式为
