一次大更新

--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -31,6 +31,7 @@
 ;针对<资源文件路径>:存在引用资源不在<GUID文件路径>的文件中，而是在当前目录或子目录或父目录
 ;中其他文件中;相对<GUID文件路径>,当前目录用".\"代替，父目录用"..\"代替,文件为其本身用"*"代替
 
+;----------------系统------------------
 ;打开(快捷方式)
 [00021401-0000-0000-c000-000000000046]
 Text=@shell32.dll,-12850
@@ -72,16 +73,16 @@ Text=@shell32.dll,-51201
 Icon=imageres.dll,-5376
 [a2a9545d-a0c2-42b4-9708-a0b2badd77c8]
 Text=附到「开始」菜单(&U)
-Icon=imageres.dll,75
-;Text=发送到(&N)
+Icon=imageres.dll,-80
+;发送到(&N)
 [7BA4C740-9E81-11CF-99D3-00AA004AE837]
 Text=@*,-30312
-Icon=imageres.dll,176
-;Text=下一个桌面背景(&N)
+Icon=imageres.dll,-185
+;下一个桌面背景(&N)
 [0bf754aa-c967-445c-ab3d-d8fda9bae7ef]
 Text=@*,-416
 Icon=imageres.dll,-5346
-;Text=新建(&W)
+;新建(&W)
 [D969A300-E7FF-11d0-A93B-00A0C90F2719]
 Text=@*,-95851
 Icon=imageres.dll,-5307
@@ -89,7 +90,7 @@ Icon=imageres.dll,-5307
 Text=Windows 小工具
 [A470F8CF-A1E8-4f65-8335-227475AA5C46]
 Text=加密(&Y)
-Icon=imageres.dll,54
+Icon=imageres.dll,-59
 ;共享
 [e2bf9676-5f8f-435c-97eb-11607a5bedf7]
 Text=@*,-107
@@ -110,7 +111,7 @@ Text=@*,-101
 ;刻录到光盘(&T)
 [fbeb8a05-beee-4442-804e-409d6c4515e9]
 Text=@*,-12560
-Icon=imageres.dll,25
+Icon=imageres.dll,-30
 [59099400-57ff-11ce-bd94-0020af85b590]
 Text=复制磁盘(&Y)...
 ;便携设备菜单
@@ -125,6 +126,9 @@ Text=@*,-1037
 ;公文包
 [85bbd920-42a0-1069-a2e4-08002b30309d]
 Text=@shell32.dll,-22978
+[645ff040-5081-101b-9f08-00aa002f954e]
+Text=清空回收站(&B)
+Icon=shell32.dll,-254
 ;全部解压缩(&T)...
 [b8cdcb65-b1bf-4b42-9428-1dfdb7ee92af]
 Text=@shell32.dll,-37514
@@ -139,13 +143,8 @@ Icon=imageres.dll,-5303
 [3080f90e-d7ad-11d9-bd98-0000947b0257]
 Text=窗口转换程序
 Icon=imageres.dll,0
-[8a734961-c4aa-4741-ac1e-791acebf5b39]
-Text=联机购买音乐
-[e598560b-28d5-46aa-a14a-8a3bea34b576]
-Text=幻灯片放映
-[cb3d0f55-bc2c-4c1a-85ed-23ed75b5106b]
-Text=OneDrive
-Icon=%LocalAppData%\Microsoft\OneDrive\OneDrive.exe,0
+
+;----------------显卡------------------
 ;用图形处理器运行
 [a929c4ce-fd36-4270-b4f5-34ecac5bd63c]
 Text=@nv3dappshextr.dll,-103
@@ -160,19 +159,10 @@ Icon=nvcpl.dll,0
 [9B5F5829-A529-4B12-814A-E81BCB8D93FC]
 Text=英特尔® 显卡设置
 Icon=.\Gfxv4_0.exe,0
-;使用 Microsoft Defender扫描...
-[09A47860-11B0-4DA5-AFA5-26D86198A780]
-Text=Microsoft Defender
-Icon=.\EppManifest.dll,0
-[18A3E590-F219-4105-9079-93DAFA51B9D6]
-Text=使用火绒安全进行杀毒
-[9F012318-CAA5-402C-9BF6-28EB36F61496]
-Text=使用火绒安全粉碎文件
-[53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
-Text=通过QQ发送到
-[9B6D38F3-8EF4-48A5-AD30-FFFFFFFFFFFF]
-Text=Honeyview
-Icon=.\Honeyview.exe,0
+[5E2121EE-0300-11D4-8D3B-444553540000]
+Text=AMD 显卡
+
+;----------------压缩------------------
 [5B69A6B4-393B-459C-8EBB-214237A9E7AC]
 Text=Bandizip
 Icon=.\Bandizip.exe,0
@@ -183,45 +173,6 @@ Icon=.\360zip.exe,0
 Text=WinRAR 64bit
 [B41DB860-8EE4-11D2-9906-E49FADC173CA]
 Text=WinRAR 32bit
-[6D85624F-305A-491d-8848-C1927AA0D790]
-Text=上传到百度网盘
-Icon=.\BaiduNetdisk.exe,0
-[67F4D210-BFC2-4ADD-9A2A-C9B9E1F42C4F]
-Text=上传到 “WPS云文档”
-[AA147FFB-0B1F-4BB1-9B1E-8D062B35C145]
-Text=自动同步文件夹到 “WPS云文档”
-[1ECDA7BF-4DFA-41D8-9380-1A27B26CFC41]
-Text=使用WPS PDF编辑
-Icon=..\..\wpspdf.exe,0
-[E3ED4700-22D4-41B6-8144-E3F5F1AC5153]
-Text=使用WPS PDF编辑
-Icon=..\..\wpspdf.exe,0
-[AF1D7D2F-6AE8-4BAA-ABFA-738201F4871C]
-Text=WPS Office PDF
-Icon=.\wpspdf.exe,0
-[B298D29A-A6ED-11DE-BA8C-A68E55D89593]
-Text=Edit with &Notepad++
-[5D652B62-B702-496A-92BC-92C308251FEA]
-Text=坚果云
-[AD392E40-428C-459F-961E-9B147782D099]
-Text=UltraISO
-Icon=.\UltraISO.exe,0
-[A3777921-CFD3-4A6B-89BF-08E6B95716E8]
-Text=格式工厂(&F)
-Icon=.\FormatFactory.exe,0
-[63332668-8CE1-445D-A5EE-25929176714E]
-Text=扫描病毒(电脑管家)
-[754DF2CE-51E8-4895-B53C-6381418B84AE]
-Text=文件粉碎(电脑管家)
-[CBDECEF7-7A29-4cbf-A009-2673D82C7BF9]
-Text=强力卸载(电脑管家)
-Icon=.\QQPCSoftMgr.exe,0
-[C5617F6A-39BB-436D-91CF-61C1B45DD688]
-Text=深度加速(管家小火箭)
-[CF444751-60FC-48B8-AC0F-363063EB2A9E]
-Text=开启桌面整理(电脑管家)
-[B3A2F1A4-10A2-410C-9C19-622B621C61D0]
-Text=换壁纸(小鸟壁纸)
 [23170F69-40C1-278A-1000-000100020000]
 Text=7-zip
 Icon=.\7zG.exe,0
@@ -239,6 +190,71 @@ Text=快压
 Text=快压
 [903D855A-D671-4A8E-A592-9168755917DB]
 Text=快压
+[e0d79304-84be-11ce-9641-444553540000]
+Text=WinZip
+Icon=.\WzPreloader.exe,0
+[acf03765-1658-485f-9615-fe03c372fb8c]
+Text=微压
+[dd847e93-86df-4d75-a421-46d29228f6da]
+Text=极光压缩
+Icon=.\plFM.exe,0
+[5e3b6ea4-de96-464f-bb86-5587969f4c62]
+Text=万能压缩
+[9175e343-1c41-4490-b178-14f36504f07e]
+Text=160压缩
+Icon=.\160zip.exe,0
+[5e3ca55c-d9f3-4d1c-8b94-ad192b0f7c16]
+Text=速压
+Icon=.\Suzip.exe,0
+[02e77c8d-2798-441e-8e6d-0c2ed9fe206e]
+Text=简压缩
+Icon=.\SimpleZip.exe,0
+[5c551008-a347-4db3-af48-014076fd2b46]
+Text=极速压缩
+Icon=.\JsZip.exe,0
+[0a4861a5-448a-48b4-812a-cf71a07a674f]
+Text=6789压缩
+[7522b611-f22b-4f24-9ce4-3ecbba85c126]
+Text=CoffeeZip
+[aa7f8063-f898-44d0-b147-8a6e9891e32e]
+Text=布丁压缩
+Icon=.\PDZip.exe,0
+[9b8dff9d-0cb2-4100-8f21-c6dd6ce01141]
+Text=布丁压缩
+Icon=.\PDZip.exe,0
+[d81a0ed9-6c47-417b-b298-4ebd813cabd0]
+Text=极客压缩
+Icon=.\GeekZip.exe,0
+[e677c7ad-2b66-4539-aa29-3771a1cfeda9]
+Text=jZip
+Icon=.\jZip.exe,0
+[a6630968-27dc-8db8-9bce-e12b3198a9b1]
+Text=WinArchiver
+Icon=.\WinArchiver.exe,0
+[1532b32d-3a75-4a4d-9b38-5a6000ea7045]
+Text=FreeArc
+Icon=..\FreeArc.exe,0
+[AD392E40-428C-459F-961E-9B147782D099]
+Text=UltraISO
+Icon=.\UltraISO.exe,0
+
+;----------------杀软------------------
+[09A47860-11B0-4DA5-AFA5-26D86198A780]
+Text=Microsoft Defender
+Icon=.\EppManifest.dll,0
+[18A3E590-F219-4105-9079-93DAFA51B9D6]
+Text=使用火绒安全进行杀毒
+[9F012318-CAA5-402C-9BF6-28EB36F61496]
+Text=使用火绒安全粉碎文件
+[63332668-8CE1-445D-A5EE-25929176714E]
+Text=扫描病毒(电脑管家)
+[754DF2CE-51E8-4895-B53C-6381418B84AE]
+Text=文件粉碎(电脑管家)
+[CBDECEF7-7A29-4cbf-A009-2673D82C7BF9]
+Text=强力卸载(电脑管家)
+Icon=.\QQPCSoftMgr.exe,0
+[C5617F6A-39BB-436D-91CF-61C1B45DD688]
+Text=深度加速(管家小火箭)
 [086F171D-5ED1-4ED2-B736-CFF3AD6A128E]
 Text=使用 360杀毒 扫描
 Icon=.\msdev.exe,0
@@ -260,26 +276,122 @@ Icon=.\kismain.exe,0
 [D21D88E8-4123-48BA-B0B1-3FDBE4AE5FA4]
 Text=金山毒霸(32位)扫描 && 文件粉碎
 Icon=.\kismain.exe,0
-[8f556da3-987d-47b0-aa88-eb8d52fe1b9a]
-Text=迅雷播放组件
-Icon=..\Program\XMP\XMP.exe,0
-[dde4beeb-dde6-48fd-8eb5-035c09923f83]
-Text=Unlocker
-Icon=.\Unlocker.exe,0
+[758c684b-4d10-4bc1-90da-6bebf0b4e0b4]
+Text=使用联想电脑管家进行扫描
+[C49499AC-DC25-478B-B903-E005012B3DD1]
+Text=使用智量扫描
+Icon=.\WiseVector.exe,0
+[cca9efd3-29ed-430a-ba6d-e6bbff0a60c2]
+Text=McAfee
+Icon=.\McInstru.exe,0
+[472083b0-c522-11cf-8763-00608cc02f24]
+Text=Avast
+Icon=..\AvastUI.exe,0
+[45ac2688-0253-4ed8-97de-b5370fa7d48a]
+Text=使用 Avira 扫描所选文件
+Icon=..\Launcher\Avira.Systray.exe,0
+
+;--------------上传下载----------------
+[cb3d0f55-bc2c-4c1a-85ed-23ed75b5106b]
+Text=OneDrive
+Icon=%LocalAppData%\Microsoft\OneDrive\OneDrive.exe,0
+[53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
+Text=通过QQ发送到
+[6D85624F-305A-491d-8848-C1927AA0D790]
+Text=上传到百度网盘
+Icon=.\BaiduNetdisk.exe,0
+[2008caf4-a5c1-4037-99a8-699e4d01456d]
+Text=天翼云盘
+Icon=.\eCloud.exe,0
+[1d39a523-4df5-4562-8fff-08c740632f4f]
+Text=360云盘
+Icon=.\360WangPan.exe,0
+[eee949eb-c9ed-4967-98b0-ed4e543befa5]
+Text=115网盘
+Icon=..\115chrome.exe,0
+[171b6b53-17b1-40b7-afb2-a415b2b40401]
+Text=上传到腾讯微云
+Icon=..\..\..\..\..\..\..\WeiyunApp.exe,0
+[5D652B62-B702-496A-92BC-92C308251FEA]
+Text=坚果云
+[67F4D210-BFC2-4ADD-9A2A-C9B9E1F42C4F]
+Text=上传到 “WPS云文档”
+[AA147FFB-0B1F-4BB1-9B1E-8D062B35C145]
+Text=自动同步文件夹到 “WPS云文档”
+[2e7a2c6c-b938-40a4-ba1c-c7ec982dc202]
+Text=发布DWF
+Icon=.\AcLauncher.exe,0
+[30351349-7b7d-4fcc-81b4-1e394ca267eb]
+Text=TortoiseSVN
+Icon=.\TortoiseIDiff.exe,0
+[10A0FDD2-B0C0-4CD4-A7AE-E594CE3B91C8]
+Text=TortoiseGit
+Icon=.\TortoiseGitProc.exe,0
+[2a535b11-6cfc-4e85-a75f-0e397b1584cf]
+Text=通过网易邮箱大师发送
+Icon=..\mailmaster.exe,0
+
+;----------------PDF------------------
 [9c5397bb-07be-4e38-98ba-395f94045091]
 Text=福昕PDF编辑器
 Icon=..\FoxitPhantom.exe,0
 [a6595cd1-bf77-430a-a452-18696685f7c7]
 Text=Adobe Acrobat
 Icon=..\Acrobat\Acrobat.exe,0
-[eee949eb-c9ed-4967-98b0-ed4e543befa5]
-Text=115网盘
-Icon=..\115chrome.exe,0
-[C49499AC-DC25-478B-B903-E005012B3DD1]
-Text=使用智量扫描
-Icon=.\WiseVector.exe,0
-[758c684b-4d10-4bc1-90da-6bebf0b4e0b4]
-Text=使用联想电脑管家进行扫描
+[d25b2cab-8a9a-4517-a9b2-cb5f68a5a802]
+Text=转换为Adobe PDF(&B)
+[1ECDA7BF-4DFA-41D8-9380-1A27B26CFC41]
+Text=使用WPS PDF编辑
+Icon=..\..\wpspdf.exe,0
+[E3ED4700-22D4-41B6-8144-E3F5F1AC5153]
+Text=使用WPS PDF编辑
+Icon=..\..\wpspdf.exe,0
+[AF1D7D2F-6AE8-4BAA-ABFA-738201F4871C]
+Text=WPS Office PDF
+Icon=.\wpspdf.exe,0
+[b4e15cd0-f916-4c8e-830a-15e3e9d01a1b]
+Text=迅读PDF大师 合并、拆分、转换
+Icon=.\MasterPDF.exe,0
+[19a73c67-f0b8-4a28-8c33-9d4eddd6fcbc]
+Text=云上PDF
+Icon=.\iPDF.exe,0
+[29424e92-60a1-40c0-bf79-1b8472dde706]
+Text=使用PDF猫编辑器打开
+Icon=.\M_pdfEdit.exe,0
+[29424e91-60a1-40c0-bf79-1b8472dde606]
+Text=使用转转大师PDF编辑器打开
+Icon=.\ZPDFEdit.exe,0
+[098a124a-aa1c-38c8-a65e-d1199a14516a]
+Text=Convert to...(万兴PDF专家)
+
+;--------------影音图像----------------
+[8a734961-c4aa-4741-ac1e-791acebf5b39]
+Text=联机购买音乐
+[f1b9284f-e9dc-4e68-9d7e-42362a59f0fd]
+Text=添加到“Windows Media Player”列表(&W)
+[ce3fb1d1-02ae-4a5f-a6e9-d9f1b4073e6c]
+Text=使用“Windows Media Player”播放(&P)
+[7d4734e6-047e-41e2-aeaa-e763b4739dc4]
+Text=使用 Media Player 播放(&P)
+[e598560b-28d5-46aa-a14a-8a3bea34b576]
+Text=幻灯片放映
+[9B6D38F3-8EF4-48A5-AD30-FFFFFFFFFFFF]
+Text=Honeyview
+Icon=.\Honeyview.exe,0
+[c2396f1e-4ba2-4b7d-857a-f764761c012b]
+Text=ACD看图
+Icon=.\AcdKantu.exe,0
+[83a97a48-f5d7-4d12-8ba3-5263a016d936]
+Text=使用光影4.0编辑
+[8f556da3-987d-47b0-aa88-eb8d52fe1b9a]
+Text=迅雷播放组件
+Icon=..\Program\XMP\XMP.exe,0
+
+;----------------美化------------------
+[CF444751-60FC-48B8-AC0F-363063EB2A9E]
+Text=开启桌面整理(电脑管家)
+[B3A2F1A4-10A2-410C-9C19-622B621C61D0]
+Text=换壁纸(小鸟壁纸)
 [3b7162fb-4389-40c8-83a5-da10d491ec66]
 Text=映射此文件夹到桌面(小智桌面)
 Icon=.\XZDesktop.exe,0
@@ -289,27 +401,21 @@ Icon=*,3
 [a2a9545d-a0c2-42b4-9708-a0b2badd77c9]
 Text=附到「开始」菜单(&U)(StartIsBack)
 Icon=.\StartIsBackCfg.exe,0
-[e0d79304-84be-11ce-9641-444553540000]
-Text=WinZip
-Icon=.\WzPreloader.exe,0
-[acf03765-1658-485f-9615-fe03c372fb8c]
-Text=微压
-[dd847e93-86df-4d75-a421-46d29228f6da]
-Text=极光压缩
-Icon=.\plFM.exe,0
-[5e3b6ea4-de96-464f-bb86-5587969f4c62]
-Text=万能压缩
-[9175e343-1c41-4490-b178-14f36504f07e]
-Text=160压缩
-Icon=.\160zip.exe,0
-[2008caf4-a5c1-4037-99a8-699e4d01456d]
-Text=天翼云盘
-Icon=.\eCloud.exe,0
-[83a97a48-f5d7-4d12-8ba3-5263a016d936]
-Text=使用光影4.0编辑
+
+;--------------文件处理----------------
+[B298D29A-A6ED-11DE-BA8C-A68E55D89593]
+Text=Edit with &Notepad++
+[A3777921-CFD3-4A6B-89BF-08E6B95716E8]
+Text=格式工厂(&F)
+Icon=.\FormatFactory.exe,0
+[dde4beeb-dde6-48fd-8eb5-035c09923f83]
+Text=Unlocker
+Icon=.\Unlocker.exe,0
 [410bf280-86ef-4e0f-8279-ec5848546ad3]
 Text=IObit Unlocker
 Icon=.\IObitUnlocker.exe,0
-[cca9efd3-29ed-430a-ba6d-e6bbff0a60c2]
-Text=McAfee
-Icon=.\McInstru.exe,0
+[836ab26c-2de4-41d3-ac24-4c6c2699b960]
+Text=强力卸载(IObit Uninstaller)
+[6CB83A5A-AA68-4895-9F54-175E789AE149]
+Text=Balabolka
+Icon=.\balabolka.exe,0
