--- a/Update.ini
+++ b/Update.ini
@@ -1,4 +1,4 @@
 [Update]
 Version=2.0.0.0
 Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/2.0.0.0/ContextMenuManager.zip
-Info=优化部分代码，添加部分GUID字典；适配Win7系统（依赖框架.Net Framework 3.5，Win7自带无需另外安装）；Win10版依赖框架为.Net Framework 4.6，Win10自带无需安装；可单独下载对应系统版本.exe文件，或下载.zip包解压后仅保留对应系统的版本
+Info=【兼容支持】\n(1).完美兼容Win10、8.1、8、7以及Vista系统；\n(2).最低支持.Net Framework 3.5；\n\n【新增功能】\n(1).添加新建菜单锁定及排序功能；\n(2).添加特殊规则禁用文件右键“使用 Skype 共享”；\n(3)支持程序内添加用户自定义字典；\n(4).添加“刷新”按钮点击即时刷新功能；\n(5).添加部分程序GUID字典和增强菜单字典；\n\n【问题修复】\n(1).修复多次切换后拖拽窗体鼠标延迟；(2).修复部分小错误，优化部分代码。
