--- a/ContextMenuManager/ContextMenuManager.csproj
+++ b/ContextMenuManager/ContextMenuManager.csproj
@@ -8,9 +8,9 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>ContextMenuManager</RootNamespace>
     <AssemblyName>ContextMenuManager</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
@@ -109,37 +109,50 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppConfig.cs" />
     <Compile Include="BulePointLilac.Controls\MyToolTip.cs" />
+    <Compile Include="BulePointLilac.Controls\ReadOnlyRichTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="BulePointLilac.Controls\ResizbleForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="BulePointLilac.Controls\MyToolBar.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="BulePointLilac.Methods\DirectoryEx.cs" />
     <Compile Include="BulePointLilac.Methods\GuidEx.cs" />
-    <Compile Include="BulePointLilac.Methods\IniFileHelper.cs" />
     <Compile Include="BulePointLilac.Methods\IniReader.cs" />
+    <Compile Include="BulePointLilac.Methods\IniWriter.cs" />
     <Compile Include="BulePointLilac.Methods\MessageBoxEx.cs" />
     <Compile Include="BulePointLilac.Methods\RichTextBoxExtension.cs" />
     <Compile Include="BulePointLilac.Methods\StringExtension.cs" />
+    <Compile Include="BulePointLilac.Methods\TextBoxExtension.cs" />
+    <Compile Include="BulePointLilac.Methods\WindowsOsVersion.cs" />
     <Compile Include="BulePointLilac.Methods\WshShortcut.cs" />
-    <Compile Include="Controls\AddCommonButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Controls\AddGuidDicDialog.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\SelectItemsForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Controls\CommandDialog.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\EnhanceMenusItem.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\EnhanceMenusList.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\Interfaces\IBtnMoveUpDownItem.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\SpecialItems\SkypeShareItem.cs">
+    <Compile Include="Controls\Interfaces\ITsiRegExportItem.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\SubMenuModeForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Controls\LockNewItem.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\SpecialItems\SkypeShareItem.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\ShellStoreDialog.cs">
       <SubType>Component</SubType>
@@ -185,9 +198,6 @@
     </Compile>
     <Compile Include="Controls\NewItemForm.cs">
       <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Controls\ShellCommonDialog.cs">
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\AboutApp.cs">
       <SubType>Component</SubType>
@@ -331,10 +341,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\AppIcon.ico" />
-    <Content Include="Properties\Resources\Texts\ShellCommonDic.xml" />
+    <Content Include="Properties\Resources\Images\Refresh.png" />
+    <Content Include="Properties\Resources\Texts\EnhanceMenusDic.xml" />
     <Content Include="Properties\Resources\Images\About.png" />
     <Content Include="Properties\Resources\Images\Add.png" />
-    <Content Include="Properties\Resources\Images\AddCommon.png" />
     <Content Include="Properties\Resources\Images\AddExisting.png" />
     <Content Include="Properties\Resources\Images\AddSeparator.png" />
     <Content Include="Properties\Resources\Images\CustomType.png" />
@@ -367,6 +377,8 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>Xcopy $(ProjectDir)\Properties\Resources\Texts\AppLanguageDic.ini $(SolutionDir)\languages\zh-CN.ini /y</PostBuildEvent>
+    <PostBuildEvent>xcopy $(ProjectDir)\Properties\Resources\Texts\AppLanguageDic.ini $(SolutionDir)\languages\zh-CN.ini /y
+mkdir $(TargetDir)\config\languages
+xcopy $(SolutionDir)\languages $(TargetDir)\config\languages /y</PostBuildEvent>
   </PropertyGroup>
 </Project>
