--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -419,3 +419,9 @@ Text=强力卸载(IObit Uninstaller)
 [6CB83A5A-AA68-4895-9F54-175E789AE149]
 Text=Balabolka
 Icon=.\balabolka.exe,0
+;PowerToys PowerRename
+[0440049f-d1dc-4e46-b27b-98393d79486b]
+Text=@*，-101
+;PowerToys调整图片大小
+[51b4d7e5-7568-4234-b4bb-47fb3c016a69]
+Text=@*,-101
