--- a/ContextMenuManager/App.config
+++ b/ContextMenuManager/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <startup>
     
-  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+  <supportedRuntime version="v2.0.50727"/></startup>
   <runtime>
     <legacyCorruptedStateExceptionsPolicy enabled="true"/>
     <EnableWindowsFormsHighDpiAutoResizing enabled="true"/>
