--- a/Update.ini
+++ b/Update.ini
@@ -1,4 +1,4 @@
 [Update]
 Version=2.1.0.0
-Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/2.0.0.0/ContextMenuManager.zip
-Info=【兼容支持】\n(1).完美兼容Win10、8.1、8、7以及Vista系统；\n(2).最低支持.Net Framework 3.5；\n\n【新增功能】\n(1).添加新建菜单锁定及排序功能；\n(2).添加特殊规则禁用文件右键“使用 Skype 共享”；\n(3)支持程序内添加用户自定义字典；\n(4).添加“刷新”按钮点击即时刷新功能；\n(5).添加部分程序GUID字典和增强菜单字典；\n(6).添加层叠部分右键菜单功能；\n(7).添加备份删除功能；\n\n【问题修复】\n(1).修复多次切换后拖拽窗体鼠标延迟；(2).修复部分小错误，优化部分代码。
+Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/2.1.0.0/ContextMenuManager.zip
+Info=【兼容支持】\n(1).完美兼容Win10、8.1、8、7以及Vista系统；\n(2).最低支持.Net Framework 3.5；\n\n【新增功能】\n(1).添加新建菜单锁定及排序功能；\n(2).添加特殊规则禁用文件右键“使用 Skype 共享”；\n(3)支持程序内添加用户自定义字典；\n(4).添加“刷新”按钮点击即时刷新功能；\n(5).添加部分程序GUID字典和增强菜单字典；\n(6).添加层叠部分右键菜单功能；\n(7).添加备份删除功能；\n\n【问题修复】\n(1).修复多次切换后拖拽窗体鼠标延迟；\n(2).修复部分小错误，优化部分代码。
