--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -212,8 +212,8 @@ AddSeparator = 添加分隔线
 Separator = 项目分隔线
 DeleteGuidDic = 删除用户自行添加的该项的本地Guid字典
 LockNewMenu = 启用后可阻止第三方程序增加项目\n且可对现有项目排序(关闭后复原)
-CheckUpdate = 程序每月自动检测一次更新(启动程序时)\n你可手动点击浏览Github、Gitee检查更新
-LastCheckUpdateTime = 上次检查更新时间：
+CheckUpdate = 程序每月自动检测一次更新 (启动程序时)\n你可手动点击浏览Github、Gitee检查更新
+LastCheckUpdateTime = 上次自动更新检查时间：
 OpenLanguagesDir = 打开语言文件夹
 OpenDictionariesDir = 打开字典文件夹
 
@@ -236,6 +236,9 @@ OpenBackupDir = 打开备份文件夹
 CheckUpdate = 检查程序及字典更新
 ImmediatelyCheckUpdate = 立即检查
 ProtectOpenItem = 保护 "打开" 菜单项目
+WebSearchEngine = 网页搜索使用的搜索引擎
+CustomEngine = 自定义
+SetCustomEngine = 设定搜索引擎 (以 %s 代替搜索关键字)
 
 AboutApp = 【主要功能】\n 1.管理常见位置右键菜单\n 2.自定义添加右键菜单\n\n【兼容性能】\n 1.适用于Win7、8、8.1、10、Vista\n 2.适用于 x64、x32 CPU 操作系统\n 3.适配高分屏，最佳缩放比为150%\n\n【代码开源】\n 1.代码语言：C Sharp, Winform程序\n 2.Github仓库：https://github.com/BluePointLilac/ContextMenuManager \n 3.Gitee仓库：https://gitee.com/BluePointLilac/ContextMenuManager \n 4.使用本程序的源代码请遵守MIT开源协议\n\n【联系作者】\n 1.程序由我个人独立开发，当然也要感谢萌研社 @坑晨 平时的答疑解惑，能力有限，\n    难免出现一些Bug，欢迎大家反馈Bug和提出建议\n 2.个人B站ID：蓝点lilac  https://space.bilibili.com/34492771 (欢迎大家关注我!)\n 3.个人邮箱：1617859183@qq.com\n\n【程序图标】\n 1.程序主图标来自 https://www.easyicon.net/1208132-mouse_icon.html \n 2.程序使用到的按钮图标主要来自 https://www.iconfont.cn/ \n\n【程序更新】\n 1.程序有检查更新功能，除了更新程序本身还会更新字典，下载完成后直接覆盖原文件即可\n 2.由于Github Raw被墙，Gitee Raw有每月次数访问上限，程序设置为每月检测一次更新，\n    大家也可以自己浏览Github Releases栏或Gitee 发行版栏检查是否有更新 \n\n【温馨提示】\n 1.一些特殊菜单项可能会受到其他因素影响导致不会显示在右键菜单中，\n    但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常的现象。\n 2.每个右键管理程序禁用菜单方法可能不同, 建议不要同时使用多个右键菜单管理程序,\n    大部分程序使用简单暴力的备份-删除法, 此程序尽可能使用了系统提供的键值进行隐藏操作,\n    若之前使用过其他程序禁用菜单项，请先使用对应程序还原, 不然可能无法在此程序中看到它。\n 3.此程序不用于清理未卸载干净的程序，但可帮助你定位菜单项相关注册表和文件位置,\n    你可根据相关内容进行你的操作，如果你是一个电脑小白，建议只碰启用\禁用开关。
 
