--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -158,7 +158,7 @@ Text=NVIDIA 控制面板
 Icon=nvcpl.dll,0
 [9B5F5829-A529-4B12-814A-E81BCB8D93FC]
 Text=英特尔® 显卡设置
-Icon=.\Gfxv4_0.exe,0
+Icon=.\igfxEM.exe,0
 [5E2121EE-0300-11D4-8D3B-444553540000]
 Text=AMD 显卡
 
@@ -255,6 +255,8 @@ Text=强力卸载(电脑管家)
 Icon=.\QQPCSoftMgr.exe,0
 [C5617F6A-39BB-436D-91CF-61C1B45DD688]
 Text=深度加速(管家小火箭)
+[b7667919-3765-4815-a66d-98a09be662d6]
+Text=清理垃圾(电脑管家)
 [086F171D-5ED1-4ED2-B736-CFF3AD6A128E]
 Text=使用 360杀毒 扫描
 Icon=.\msdev.exe,0
@@ -290,6 +292,10 @@ Icon=..\AvastUI.exe,0
 [45ac2688-0253-4ed8-97de-b5370fa7d48a]
 Text=使用 Avira 扫描所选文件
 Icon=..\Launcher\Avira.Systray.exe,0
+[9b9f6e01-a5cf-4269-b245-cff66a7daebd]
+Text=卡巴斯基
+[57ce581a-0cb6-4266-9ca0-19364c90a0b3]
+Text=Malwarebytes
 
 ;--------------上传下载----------------
 [cb3d0f55-bc2c-4c1a-85ed-23ed75b5106b]
@@ -318,18 +324,6 @@ Text=坚果云
 Text=上传到 “WPS云文档”
 [AA147FFB-0B1F-4BB1-9B1E-8D062B35C145]
 Text=自动同步文件夹到 “WPS云文档”
-[2e7a2c6c-b938-40a4-ba1c-c7ec982dc202]
-Text=发布DWF
-Icon=.\AcLauncher.exe,0
-[30351349-7b7d-4fcc-81b4-1e394ca267eb]
-Text=TortoiseSVN
-Icon=.\TortoiseIDiff.exe,0
-[10A0FDD2-B0C0-4CD4-A7AE-E594CE3B91C8]
-Text=TortoiseGit
-Icon=.\TortoiseGitProc.exe,0
-[2a535b11-6cfc-4e85-a75f-0e397b1584cf]
-Text=通过网易邮箱大师发送
-Icon=..\mailmaster.exe,0
 
 ;----------------PDF------------------
 [9c5397bb-07be-4e38-98ba-395f94045091]
@@ -401,6 +395,9 @@ Icon=*,3
 [a2a9545d-a0c2-42b4-9708-a0b2badd77c9]
 Text=附到「开始」菜单(&U)(StartIsBack)
 Icon=.\StartIsBackCfg.exe,0
+[2d5ad9eb-31bc-48f7-a438-28f363632c73]
+Text=开启布丁桌面
+Icon=.\PDLanuncher.exe,0
 
 ;--------------文件处理----------------
 [B298D29A-A6ED-11DE-BA8C-A68E55D89593]
@@ -425,3 +422,22 @@ Text=@*,-101
 ;PowerToys调整图片大小
 [51b4d7e5-7568-4234-b4bb-47fb3c016a69]
 Text=@*,-101
+[2e7a2c6c-b938-40a4-ba1c-c7ec982dc202]
+Text=发布DWF
+Icon=.\AcLauncher.exe,0
+[30351349-7b7d-4fcc-81b4-1e394ca267eb]
+Text=TortoiseSVN
+Icon=.\TortoiseIDiff.exe,0
+[10A0FDD2-B0C0-4CD4-A7AE-E594CE3B91C8]
+Text=TortoiseGit
+Icon=.\TortoiseGitProc.exe,0
+[2a535b11-6cfc-4e85-a75f-0e397b1584cf]
+Text=通过网易邮箱大师发送
+Icon=..\mailmaster.exe,0
+[57fa2d12-d22d-490a-805a-5cb48e84f12a]
+Text=Beyond Compare
+Icon=.\BCompare.exe,0
+
+;----------------其他------------------
+[00000000-0000-0000-0000-000000000012]
+Text=显示隐藏文件+扩展名
