--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -300,9 +300,7 @@ Text=Malwarebytes
 ;--------------上传下载----------------
 [cb3d0f55-bc2c-4c1a-85ed-23ed75b5106b]
 Text=OneDrive
-Icon=%LocalAppData%\Microsoft\OneDrive\OneDrive.exe,0
-[53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
-Text=通过QQ发送到
+Icon=..\..\OneDrive.exe,0
 [6D85624F-305A-491d-8848-C1927AA0D790]
 Text=上传到百度网盘
 Icon=.\BaiduNetdisk.exe,0
@@ -357,6 +355,9 @@ Text=使用转转大师PDF编辑器打开
 Icon=.\ZPDFEdit.exe,0
 [098a124a-aa1c-38c8-a65e-d1199a14516a]
 Text=Convert to...(万兴PDF专家)
+[fb074836-8286-4089-84dc-f504e9ef621c]
+Text=ABBYY FineReader
+Icon=..\FineUpdate.exe,0
 
 ;--------------影音图像----------------
 [8a734961-c4aa-4741-ac1e-791acebf5b39]
@@ -391,15 +392,20 @@ Text=映射此文件夹到桌面(小智桌面)
 Icon=.\XZDesktop.exe,0
 [96babf4f-7c38-4885-b407-3800f461669b]
 Text=打开火萤视频桌面
-Icon=*,3
+Icon=..\..\HYVideoDesktop.exe,0
 [a2a9545d-a0c2-42b4-9708-a0b2badd77c9]
 Text=附到「开始」菜单(&U)(StartIsBack)
 Icon=.\StartIsBackCfg.exe,0
 [2d5ad9eb-31bc-48f7-a438-28f363632c73]
 Text=开启布丁桌面
 Icon=.\PDLanuncher.exe,0
+[b5e436bc-642a-4bf6-b725-26038af26e89]
+Text=开启猎豹轻桌面
+Icon=.\kdesk.exe,0
 
 ;--------------文件处理----------------
+[53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
+Text=通过QQ发送到
 [B298D29A-A6ED-11DE-BA8C-A68E55D89593]
 Text=Edit with &Notepad++
 [A3777921-CFD3-4A6B-89BF-08E6B95716E8]
@@ -437,7 +443,22 @@ Icon=..\mailmaster.exe,0
 [57fa2d12-d22d-490a-805a-5cb48e84f12a]
 Text=Beyond Compare
 Icon=.\BCompare.exe,0
-
-;----------------其他------------------
+[9557f42f-bd61-4e26-9752-33a8a20fc9f9]
+Text=分享文件(华为电脑管家)
+Icon=.\PCManager.exe,0
+[c3db4192-4c22-428f-8c12-cf9cfabbdd17]
+Text=通过AirDroid发送到我的设备
+[0b488c12-e68e-44d7-9259-fb8e5df8bb27]
+Text=内网通
+Icon=.\ShiYeLine.exe,0
+[256ef94c-697d-4986-b99b-9d3b15d79b49]
+Text=Infinit
+[a97a01b0-3b66-4336-bc9b-168e64bfb296]
+Text=广讯通发送文件
+Icon=.\GXT.exe,0
+[1ed0f018-76b9-4db9-9c06-ca0f3088f04f]
+Text=FileLocator Pro
 [00000000-0000-0000-0000-000000000012]
 Text=显示隐藏文件+扩展名
+[c1b2c38f-3dca-4e3d-bc34-d5b87b636543]
+Text=FileMenu Tools
